--- a/style.css
+++ b/style.css
@@ -8,6 +8,6 @@ body {
   outline: 14px solid #ffffff;
   background-color: #000000;
   text-align: center;
-  display: inline-block;
-  width: 20%
+  height: auto;
+  width: auto
 }
